[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/MainMenu/background.png" type="Texture" id=1]
[ext_resource path="res://UI/DefaultButton/DefaultButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/MainMenu/MainMenu.gd" type="Script" id=3]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 162.987, 95.5003 )
scale = Vector2( 0.571882, 0.628287 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="NewGameBtn" parent="." instance=ExtResource( 2 )]
margin_left = 105.0
margin_top = 55.0
margin_right = 209.0
margin_bottom = 84.0
text = "New Game"

[node name="SettingsBtn" parent="." instance=ExtResource( 2 )]
margin_left = 106.0
margin_top = 94.0
margin_right = 210.0
margin_bottom = 123.0
text = "Settings"

[node name="QuitBtn" parent="." instance=ExtResource( 2 )]
margin_left = 106.0
margin_top = 134.0
margin_right = 210.0
margin_bottom = 163.0
text = "Quitt"

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[connection signal="pressed" from="NewGameBtn" to="." method="_on_NewGameBtn_pressed"]
[connection signal="pressed" from="SettingsBtn" to="." method="_on_SettingsBtn_pressed"]
[connection signal="pressed" from="QuitBtn" to="." method="_on_QuitBtn_pressed"]
